# arks

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: archivetypes.rs  bz2.rs  file_types.rs  main.rs  mytar.rs  myzip.rs  pipe.rs  search.rs  targz.rs
